# lab_4

.github/workflows/: master_unfinished.yml
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  formatter_ex.h
formatter_lib/: CMakeCache.txt
hello_world_application/: Cmakelists.txt
solver_application/: CMakeLists.txt  CMakelists.txt  Cmakelists.txt
solver_lib/: CMakelists.txt
